ray-js/styles.css
body {
    margin: 0;
    box-sizing: border-box;
    font-family: 'Overpass Mono', monospace;
    background-color: #C5C1C0;
    font-size: 1.125rem;
    color: #0A1612;
    
}



#container {
   
    display: flex;
    max-width: 850px;
    min-height: 100vh;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    padding: 0 2rem;
   
}

header {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: auto;
    min-height: 200px;
}

nav {
    margin-top: 50px;
    opacity: 0;
    transition: 3s;
    position: relative;
    bottom: 70px; 
    min-height: 200px;
}

h1 {
    border-bottom: 1px solid #0A1612;
    
}

h2 {
    cursor: pointer;
    transition: 200ms;
    margin-bottom: 25px;
}

h2:hover {
    border-bottom: 10px solid #F7CE3E;
    padding-bottom: 3px;
    width: 75%;
    
}

.skillsInfo,
.aboutInfo,
.projectInfo {
    text-align: left;
    position:absolute;
    opacity: 0;
    transition: .41s ease;
    text-align: center;
    padding: 1rem;
    width: 80%;
    margin: auto;
}

.closeBox {
    position:absolute;
    opacity: 0;
}

li {
    list-style-type: none;
}
   
footer {
    width: 100%;
    margin-top: auto;
    padding: 1rem;
    display: flex;
    justify-content: space-around;
    border-top: 1px solid #0A1612;
}

a {
    color: #0A1612;
    text-decoration: none;

}

a:hover {
    cursor: pointer;
    border-bottom: 5px solid #F7CE3E;

}

.aboutInfo p {
    font-size: 1.2rem;
    text-align: justify;
}

.emojis {
    font-size: 1.9rem;
}

